--- a/team/questions-part1.html
+++ b/team/questions-part1.html
@@ -1,50 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>BED – Team Questions</title>
-
-  <link rel="manifest" href="../manifest.json">
-  <meta name="theme-color" content="#1E90FF">
-  <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('../sw.js', {scope: '../'});
-  }
-  </script>
-
   <style>
-    :root{--blue:#1E90FF; --grey:#888;}
-    body{font-family:system-ui,Arial,sans-serif; margin:0; padding:24px;}
-    .container{max-width:640px; margin:0 auto;}
-    h1{font-size:26px; font-weight:700; margin:0;}
-    .subheader{font-size:20px; font-weight:600; margin:6px 0 18px; color:#444;}
-    .question{margin-bottom:20px;}
-    label{display:block; font-weight:600; margin-bottom:6px;}
-    textarea{width:100%; padding:10px; border:1px solid #ddd; border-radius:8px; min-height:80px;}
-    .actions{margin-top:24px;}
-    .btn{padding:12px 16px; border-radius:10px; border:1px solid #ddd; font-size:16px; cursor:pointer;}
-    .btn-primary{background:var(--blue); color:#fff; border-color:var(--blue);}
+    :root{--blue:#1E90FF;--muted:#6b7280;--line:#e5e7eb}
+    body{font-family:system-ui,Arial,sans-serif;margin:0;background:#fff;color:#111}
+    .wrap{max-width:860px;margin:0 auto;padding:24px}
+    h1{font-size:28px;margin:0 0 6px;font-weight:900}
+    h2{font-size:22px;margin:0 0 18px;font-weight:800;color:#444}
+    .group{margin:18px 0 6px;font-weight:800;color:#444}
+    .q{padding:14px 0;border-bottom:1px solid var(--line)}
+    .stmt{font-size:18px;font-weight:700;margin:0 0 4px}
+    .sub{color:var(--muted);font-size:14px;margin:0 0 10px}
+    .scale{display:flex;gap:10px;flex-wrap:wrap}
+    .pill{width:38px;height:38px;border:1px solid #cfd4dc;border-radius:50%;
+          display:inline-flex;align-items:center;justify-content:center;cursor:pointer}
+    .pill.selected{background:var(--blue);color:#fff;border-color:var(--blue)}
+    .footer{display:flex;justify-content:flex-end;gap:10px;margin-top:18px}
+    button{min-width:130px;height:44px;border-radius:12px;border:0;font-size:16px}
+    .primary{background:var(--blue);color:#fff}
+    .primary:disabled{background:#c9d7ff;cursor:not-allowed}
   </style>
 </head>
 <body>
-  <main class="container">
+  <main class="wrap">
     <h1>BED HOSPITALITY 2.0</h1>
-    <p class="subheader">Team Member – Questions Page 1</p>
+    <h2>Team – All Questions</h2>
 
-    <div class="question">
-      <label for="q1">1. What was your biggest achievement this week?</label>
-      <textarea id="q1"></textarea>
-    </div>
+    <div id="questions"></div>
 
-    <div class="question">
-      <label for="q2">2. Which area do you feel you improved most?</label>
-      <textarea id="q2"></textarea>
-    </div>
-
-    <div class="actions">
-      <button class="btn btn-primary" onclick="alert('Next page coming soon…')">Next</button>
+    <div class="footer">
+      <button id="submitBtn" class="primary" disabled>Submit</button>
     </div>
   </main>
+
+  <script>
+  (async function () {
+    // 1) load your original TEAM questions JSON
+    const res = await fetch('../data/questions_team.json');
+    const data = await res.json(); // has { groups: [...], questions: [...] }
+
+    const qWrap = document.getElementById('questions');
+    const answers = {}; // id -> 1..5
+
+    // helper to add a group header when it changes
+    let currentGroup = '';
+    function maybeAddGroupHeader(groupName) {
+      if (groupName !== currentGroup) {
+        currentGroup = groupName;
+        const g = document.createElement('div');
+        g.className = 'group';
+        g.textContent = currentGroup;
+        qWrap.appendChild(g);
+      }
+    }
+
+    // 2) render each question
+    data.questions.forEach((q, idx) => {
+      maybeAddGroupHeader(q.group);
+
+      const row = document.createElement('div');
+      row.className = 'q';
+      row.dataset.qid = q.id;
+
+      row.innerHTML = `
+        <div class="stmt">${idx+1}. ${q.statement}</div>
+        ${q.subtext ? `<div class="sub">${q.subtext}</div>` : ``}
+        <div class="scale">
+          ${[1,2,3,4,5].map(n => `
+            <div class="pill" data-val="${n}" title="${n}">
+              <span>${n}</span>
+            </div>
+          `).join('')}
+        </div>
+      `;
+
+      // select logic for the 5 pills
+      row.querySelectorAll('.pill').forEach(p => {
+        p.addEventListener('click', () => {
+          row.querySelectorAll('.pill').forEach(x => x.classList.remove('selected'));
+          p.classList.add('selected');
+          answers[q.id] = Number(p.dataset.val);
+          checkReady();
+        });
+      });
+
+      qWrap.appendChild(row);
+    });
+
+    // 3) enable submit when all answered
+    function checkReady() {
+      const total = data.questions.length;
+      const answered = Object.keys(answers).length;
+      document.getElementById('submitBtn').disabled = answered !== total;
+    }
+
+    // 4) submit → save and (for now) show a simple thank-you
+    document.getElementById('submitBtn').addEventListener('click', () => {
+      // persist locally so a scoring page can read it later if you want
+      localStorage.setItem('bed_team_answers', JSON.stringify(answers));
+      alert('Thanks! Your answers were saved locally.');
+      // TODO: redirect to scoring page if you have one:
+      // location.href = 'scoring.html';
+    });
+  })();
+  </script>
 </body>
 </html>
