--- a/team/scoring.html
+++ b/team/scoring.html
@@ -1,33 +1,84 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>BED – Team Scoring</title>
-<style>body{font-family:system-ui,Arial,sans-serif;margin:0;background:#F9FAFB;color:#111}
-.wrap{max-width:720px;margin:0 auto;padding:24px}h1{margin:0 0 6px;font-weight:900}
-.card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin-top:12px}
-.kpi{font-size:28px;font-weight:900;margin:0}table{width:100%;border-collapse:collapse;margin-top:10px}
-th,td{border-bottom:1px solid #eee;padding:8px 6px;text-align:left}
-.btn{display:inline-block;margin-top:14px;padding:10px 14px;border-radius:10px;background:#1E90FF;color:#fff;text-decoration:none}
-.muted{color:#666;font-size:13px}</style></head><body><main class="wrap">
-<h1>BED HOSPITALITY 2.0</h1><p class="muted">Team – Results</p>
-<div class="card"><div id="overall" class="kpi">—</div><div class="muted">overall average (1–5)</div></div>
-<div class="card"><table id="byGroup"><thead><tr><th>Group</th><th>Avg</th></tr></thead><tbody></tbody></table></div>
-<a class="btn" href="../selection.html">Back to selection</a>
-</main>
-<script>
-(async () => {
-  const answers = JSON.parse(localStorage.getItem('bed_team_answers')||'{}');
-  const res = await fetch('../data/questions_team.json'); // loads original items :contentReference[oaicite:0]{index=0}
-  const data = await res.json();
-  const qByGroup = {};
-  data.questions.forEach(q => { if(answers[q.id]) (qByGroup[q.group] ||= []).push(answers[q.id]); });
-  const avg = arr => arr.reduce((a,b)=>a+b,0)/arr.length;
-  const allVals = Object.values(answers);
-  document.getElementById('overall').textContent = allVals.length ? avg(allVals).toFixed(2) : '—';
-  const tbody = document.querySelector('#byGroup tbody');
-  Object.keys(qByGroup).forEach(g=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${g}</td><td>${avg(qByGroup[g]).toFixed(2)}</td>`;
-    tbody.appendChild(tr);
-  });
-})();
-</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BED – Team Scoring</title>
+  <style>
+    body {
+      font-family: system-ui, Arial, sans-serif;
+      margin: 0;
+      padding: 24px;
+      background: #f9fafb;
+      color: #333;
+    }
+    .container { max-width: 800px; margin: 0 auto; }
+    h1 { font-size: 28px; font-weight: 800; margin-bottom: 4px; color:#1E90FF; }
+    h2 { font-size: 20px; font-weight: 700; margin: 20px 0 6px; }
+    .score { font-size: 32px; font-weight: 900; margin: 8px 0; }
+    .group { border: 1px solid #ddd; border-radius: 10px; padding: 16px; margin: 16px 0; background:#fff; }
+    .group h3 { margin: 0 0 8px; font-size: 18px; color:#444; }
+    .back { margin-top: 20px; display: inline-block; color:#1E90FF; text-decoration: underline; cursor: pointer; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Team Member – Results</h1>
+    <h2>Overall Score</h2>
+    <div id="overall" class="score">–</div>
+    <h2>Scores by Group</h2>
+    <div id="groups"></div>
+    <div class="back" onclick="history.back()">← Back</div>
+  </div>
+
+  <script>
+    async function load() {
+      try {
+        // Load saved answers
+        const answers = JSON.parse(localStorage.getItem('bed_team_answers') || '{}');
+        // Load question definitions
+        const qres = await fetch('../questions_team.json');
+        const questions = await qres.json();
+
+        if (!answers || Object.keys(answers).length === 0) {
+          document.getElementById('overall').textContent = "No answers found";
+          return;
+        }
+
+        // Compute scores per group
+        const groupScores = {};
+        let total = 0, count = 0;
+
+        for (const q of questions) {
+          const val = parseInt(answers[q.id], 10);
+          if (!isNaN(val)) {
+            total += val; count++;
+            if (!groupScores[q.group]) groupScores[q.group] = {sum:0, n:0};
+            groupScores[q.group].sum += val;
+            groupScores[q.group].n++;
+          }
+        }
+
+        // Show overall
+        const overall = (count > 0) ? (total / count).toFixed(2) : "–";
+        document.getElementById('overall').textContent = overall;
+
+        // Show groups
+        const groupsDiv = document.getElementById('groups');
+        groupsDiv.innerHTML = "";
+        for (const g in groupScores) {
+          const avg = (groupScores[g].sum / groupScores[g].n).toFixed(2);
+          const div = document.createElement('div');
+          div.className = 'group';
+          div.innerHTML = `<h3>${g}</h3><div class="score">${avg}</div>`;
+          groupsDiv.appendChild(div);
+        }
+      } catch (err) {
+        console.error(err);
+        document.getElementById('overall').textContent = "Error loading results";
+      }
+    }
+    load();
+  </script>
+</body>
+</html>
