--- a/peer/index.html
+++ b/peer/index.html
@@ -570,7 +570,7 @@
    <body>
       <main class="container">
          <h1>BED HOSPITALITY 2.0</h1>
-         <p class="subheader">TEAM MEMBER FORM</p>
+         <p class="subheader">PEER REVIEW FORM</p>
          <div class="progress" id="progressHeader"><span class="dot"></span><span class="dot"></span><span class="dot"></span> <span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
          <!-- PAGE 1 -->
          <section id="welcome">
