--- a/index.html
+++ b/index.html
@@ -1,13 +1,96 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BED forms</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BED HOSPITALITY 2.0</title>
+  <style>
+    :root{
+      --text-dark:#434343;     /* project dark gray */
+      --brand-blue:#1E90FF;    /* project blue */
+      --muted:#9AA3AD;         /* light grey for subtext */
+      --card-bg:#ffffff;
+      --page-bg:#f5f5f5;
+      --radius:16px;
+      --shadow:0 8px 24px rgba(0,0,0,0.08);
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0; background:var(--page-bg); color:var(--text-dark);
+      font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    }
+    .wrap{
+      max-width:720px; margin:40px auto; padding:16px;
+    }
+    .card{
+      background:var(--card-bg); border-radius:24px; box-shadow:var(--shadow);
+      padding:28px 24px;
+    }
+    h1{
+      margin:0 0 4px 0; font-weight:800; letter-spacing:.2px;
+    }
+    .sub{
+      margin:0 0 20px 0; color:#666; text-transform:none; /* lower case */
+      font-size:18px;
+    }
+    .btn{
+      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
+      width:100%; text-align:left; padding:18px 18px;
+      border-radius:20px; cursor:pointer; display:block;
+      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
+      margin:14px 0;
+    }
+    .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
+    .btn:hover{border-color:var(--brand-blue)}
+    .btn:active{transform:scale(.997)}
+    .row{display:flex; align-items:center; gap:12px}
+    .title{
+      font-weight:700; font-size:18px; text-decoration:none;
+      color:var(--text-dark);
+    }
+    .subtitle{
+      font-size:14px; color:var(--muted); margin-top:2px;
+    }
+    /* small badge accent in brand blue (optional “where applicable”) */
+    .badge{
+      width:28px; height:28px; border-radius:8px; background:var(--brand-blue);
+      opacity:.12; flex:none;
+    }
+
+    @media (min-width:640px){
+      .btn{padding:20px 22px}
+      .title{font-size:19px}
+    }
+  </style>
 </head>
 <body>
-  <h1>BED HOSPITALITY 2.0</h1>
-  <p><a href="./team/">Team form</a></p>
-  <p><a href="./peer/">Peer form</a></p>
+  <main class="wrap">
+    <section class="card" role="region" aria-labelledby="title">
+      <h1 id="title">BED HOSPITALITY 2.0</h1>
+      <p class="sub">self assessment form — choose your role</p>
+
+      <!-- Button 1: Team -->
+      <button class="btn" onclick="location.href='./team/';" aria-label="I am a team member. I will do the self assessment.">
+        <div class="row">
+          <div class="badge" aria-hidden="true"></div>
+          <div>
+            <div class="title">I am a team member</div>
+            <div class="subtitle">I will do the self assessment</div>
+          </div>
+        </div>
+      </button>
+
+      <!-- Button 2: Peer -->
+      <button class="btn" onclick="location.href='./peer/';" aria-label="I am a peer reviewer. I will do the peer assessment.">
+        <div class="row">
+          <div class="badge" aria-hidden="true"></div>
+          <div>
+            <div class="title">I am a peer reviewer</div>
+            <div class="subtitle">I will do the peer assessment</div>
+          </div>
+        </div>
+      </button>
+    </section>
+  </main>
 </body>
 </html>
