--- a/index.html
+++ b/index.html
@@ -6,57 +6,41 @@
   <title>BED HOSPITALITY 2.0</title>
   <style>
     :root{
-      --text-dark:#434343;     /* project dark gray */
-      --brand-blue:#1E90FF;    /* project blue */
-      --muted:#9AA3AD;         /* light grey for subtext */
+      --text-dark:#434343;
+      --brand-blue:#1E90FF;
+      --muted:#9AA3AD;
       --card-bg:#ffffff;
       --page-bg:#f5f5f5;
-      --radius:16px;
-      --shadow:0 8px 24px rgba(0,0,0,0.08);
     }
     *{box-sizing:border-box}
     body{
       margin:0; background:var(--page-bg); color:var(--text-dark);
       font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     }
-    .wrap{
-      max-width:720px; margin:40px auto; padding:16px;
-    }
-    .card{
-      background:var(--card-bg); border-radius:24px; box-shadow:var(--shadow);
-      padding:28px 24px;
-    }
+    .wrap{max-width:720px; margin:40px auto; padding:16px}
+    .card{background:var(--card-bg); border-radius:24px; box-shadow:0 8px 24px rgba(0,0,0,.08); padding:28px 24px}
     h1{
-      margin:0 0 4px 0; font-weight:800; letter-spacing:.2px;
+      margin:0 0 8px 0; font-weight:800; letter-spacing:.2px;
+      white-space:nowrap;                          /* keep on one line */
+      font-size:clamp(22px, 6.2vw, 44px);          /* auto-shrink to stay on one line */
     }
     .sub{
-      margin:0 0 20px 0; color:#666; text-transform:none; /* lower case */
-      font-size:18px;
+      margin:0 0 20px 0; color:#555; text-transform:none;
+      font-size:clamp(16px, 4.3vw, 20px); font-weight:600; /* bigger & semi-bold */
+      white-space:nowrap;                                   /* stay on one line */
     }
     .btn{
       appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
-      width:100%; text-align:left; padding:18px 18px;
-      border-radius:20px; cursor:pointer; display:block;
-      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
-      margin:14px 0;
+      width:100%; text-align:left; padding:18px; border-radius:20px; cursor:pointer; display:block;
+      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease; margin:14px 0;
     }
-    .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:hover{border-color:var(--brand-blue)}
+    .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
     .row{display:flex; align-items:center; gap:12px}
-    .title{
-      font-weight:700; font-size:18px; text-decoration:none;
-      color:var(--text-dark);
-    }
-    .subtitle{
-      font-size:14px; color:var(--muted); margin-top:2px;
-    }
-    /* small badge accent in brand blue (optional “where applicable”) */
-    .badge{
-      width:28px; height:28px; border-radius:8px; background:var(--brand-blue);
-      opacity:.12; flex:none;
-    }
-
+    .title{font-weight:700; font-size:18px}
+    .subtitle{font-size:14px; color:var(--muted); margin-top:2px}
+    .icon{width:22px; height:22px; flex:none; display:inline-block}
     @media (min-width:640px){
       .btn{padding:20px 22px}
       .title{font-size:19px}
@@ -67,26 +51,39 @@
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
-      <p class="sub">self assessment form — choose your role</p>
+      <p class="sub">self assessment form</p>
 
-      <!-- Button 1: Team -->
-      <button class="btn" onclick="location.href='./team/';" aria-label="I am a team member. I will do the self assessment.">
+      <!-- Button 1: Team (one person icon) -->
+      <button class="btn" onclick="location.href='./team/';"
+        aria-label="I am a team member. I want to assess myself.">
         <div class="row">
-          <div class="badge" aria-hidden="true"></div>
+          <!-- single person icon -->
+          <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <circle cx="12" cy="8" r="4" fill="var(--brand-blue)"></circle>
+            <path d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6" fill="var(--brand-blue)" opacity=".2"></path>
+            <path d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6" stroke="var(--brand-blue)" stroke-linecap="round"></path>
+          </svg>
           <div>
             <div class="title">I am a team member</div>
-            <div class="subtitle">I will do the self assessment</div>
+            <div class="subtitle">I want to assess myself</div>
           </div>
         </div>
       </button>
 
-      <!-- Button 2: Peer -->
-      <button class="btn" onclick="location.href='./peer/';" aria-label="I am a peer reviewer. I will do the peer assessment.">
+      <!-- Button 2: Peer (two persons icon) -->
+      <button class="btn" onclick="location.href='./peer/';"
+        aria-label="I am a peer reviewer. I want to review my friend.">
         <div class="row">
-          <div class="badge" aria-hidden="true"></div>
+          <!-- two persons icon -->
+          <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <circle cx="9" cy="8" r="3.5" fill="var(--brand-blue)"></circle>
+            <circle cx="15.5" cy="9.5" r="3" fill="var(--brand-blue)" opacity=".85"></circle>
+            <path d="M2.5 20c0-3 3.1-5.5 6.5-5.5S15.5 17 15.5 20" fill="var(--brand-blue)" opacity=".18"></path>
+            <path d="M9 14.5c3.8 0 6.5 2 6.5 5.5M5.5 20c0-2.4 2.6-4.3 5.7-4.5" stroke="var(--brand-blue)" stroke-linecap="round"></path>
+          </svg>
           <div>
             <div class="title">I am a peer reviewer</div>
-            <div class="subtitle">I will do the peer assessment</div>
+            <div class="subtitle">I want to review my friend</div>
           </div>
         </div>
       </button>
