--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>BED HOSPITALITY 2.0</title>
   <style>
     :root{
-      --text-dark:#434343;
-      --brand-blue:#1E90FF;
-      --muted:#9AA3AD;
+      --text-dark:#434343;          /* project dark gray */
+      --brand-blue:#1E90FF;         /* theme blue */
+      --muted:#999999;              /* requested subtext color */
       --card-bg:#ffffff;
       --page-bg:#f5f5f5;
     }
@@ -19,29 +19,45 @@
     }
     .wrap{max-width:720px; margin:40px auto; padding:16px}
     .card{background:var(--card-bg); border-radius:24px; box-shadow:0 8px 24px rgba(0,0,0,.08); padding:28px 24px}
+
+    /* Header style to match attachment */
     h1{
-      margin:0 0 8px 0; font-weight:800; letter-spacing:.2px;
-      white-space:nowrap;                          /* keep on one line */
-      font-size:clamp(22px, 6.2vw, 44px);          /* auto-shrink to stay on one line */
+      margin:0 0 4px 0; font-weight:900; letter-spacing:.2px;
+      font-size:clamp(26px,6.4vw,44px);
     }
-    .sub{
-      margin:0 0 20px 0; color:#555; text-transform:none;
-      font-size:clamp(16px, 4.3vw, 20px); font-weight:600; /* bigger & semi-bold */
-      white-space:nowrap;                                   /* stay on one line */
+    .subhead{
+      margin:0 0 22px 0; font-weight:800; letter-spacing:.3px;
+      text-transform:uppercase; font-size:clamp(16px,3.6vw,22px);
+      color:#4d4d4d;
     }
+
+    /* Buttons */
     .btn{
       appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
-      width:100%; text-align:left; padding:18px; border-radius:20px; cursor:pointer; display:block;
-      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease; margin:14px 0;
+      width:100%; border-radius:20px; cursor:pointer; display:block;
+      transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
+      margin:14px 0; padding:16px 18px;
     }
     .btn:hover{border-color:var(--brand-blue)}
     .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
-    .row{display:flex; align-items:center; gap:12px}
-    .title{font-weight:700; font-size:18px}
-    .subtitle{font-size:14px; color:var(--muted); margin-top:2px}
-    .icon{width:22px; height:22px; flex:none; display:inline-block}
+
+    /* Layout: make icon as tall as the two text lines */
+    .btn-grid{
+      display:grid; grid-template-columns:auto 1fr; gap:14px; align-items:center;
+    }
+    .title{font-weight:800; font-size:18px; line-height:1.2}
+    .subtitle{font-size:14px; color:var(--muted); margin-top:3px; line-height:1.2}
+
+    /* Prominent icons (square with blue bg + white people) */
+    .icon{
+      width:48px; height:48px; flex:none;
+      border-radius:12px; background:var(--brand-blue);
+      display:inline-block;
+    }
+    .icon svg{width:100%; height:100%}
     @media (min-width:640px){
+      .icon{width:56px; height:56px}
       .btn{padding:20px 22px}
       .title{font-size:19px}
     }
@@ -51,18 +67,19 @@
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
-      <p class="sub">self assessment form</p>
+      <div class="subhead">Self Assessment Form</div>
 
-      <!-- Button 1: Team (one person icon) -->
+      <!-- Button 1: Team (single person icon) -->
       <button class="btn" onclick="location.href='./team/';"
         aria-label="I am a team member. I want to assess myself.">
-        <div class="row">
-          <!-- single person icon -->
-          <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <circle cx="12" cy="8" r="4" fill="var(--brand-blue)"></circle>
-            <path d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6" fill="var(--brand-blue)" opacity=".2"></path>
-            <path d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6" stroke="var(--brand-blue)" stroke-linecap="round"></path>
-          </svg>
+        <div class="btn-grid">
+          <span class="icon" aria-hidden="true">
+            <!-- one person icon (white) -->
+            <svg viewBox="0 0 48 48" fill="none">
+              <circle cx="24" cy="16" r="9" fill="#ffffff"/>
+              <path d="M8 40c0-8.3 7.6-14 16-14s16 5.7 16 14" fill="#ffffff" opacity=".9"/>
+            </svg>
+          </span>
           <div>
             <div class="title">I am a team member</div>
             <div class="subtitle">I want to assess myself</div>
@@ -73,14 +90,16 @@
       <!-- Button 2: Peer (two persons icon) -->
       <button class="btn" onclick="location.href='./peer/';"
         aria-label="I am a peer reviewer. I want to review my friend.">
-        <div class="row">
-          <!-- two persons icon -->
-          <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <circle cx="9" cy="8" r="3.5" fill="var(--brand-blue)"></circle>
-            <circle cx="15.5" cy="9.5" r="3" fill="var(--brand-blue)" opacity=".85"></circle>
-            <path d="M2.5 20c0-3 3.1-5.5 6.5-5.5S15.5 17 15.5 20" fill="var(--brand-blue)" opacity=".18"></path>
-            <path d="M9 14.5c3.8 0 6.5 2 6.5 5.5M5.5 20c0-2.4 2.6-4.3 5.7-4.5" stroke="var(--brand-blue)" stroke-linecap="round"></path>
-          </svg>
+        <div class="btn-grid">
+          <span class="icon" aria-hidden="true">
+            <!-- two persons icon (white) -->
+            <svg viewBox="0 0 48 48" fill="none">
+              <circle cx="19" cy="18" r="8" fill="#ffffff"/>
+              <circle cx="32.5" cy="19.5" r="7" fill="#ffffff" opacity=".92"/>
+              <path d="M6 40c0-6.8 6.2-12 13-12s13 5.2 13 12" fill="#ffffff" opacity=".9"/>
+              <path d="M19 28.5c6.6 0 13 4.2 13 11.5" stroke="#ffffff" stroke-linecap="round" opacity=".9"/>
+            </svg>
+          </span>
           <div>
             <div class="title">I am a peer reviewer</div>
             <div class="subtitle">I want to review my friend</div>
