--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>BED HOSPITALITY 2.0</title>
   <style>
     :root{
-      --text-dark:#434343;          /* project dark gray */
-      --brand-blue:#1E90FF;         /* theme blue */
-      --muted:#999999;              /* requested subtext color */
+      --text-dark:#434343;
+      --brand-blue:#1E90FF;
+      --muted:#999999;
       --card-bg:#ffffff;
       --page-bg:#f5f5f5;
     }
@@ -17,18 +17,36 @@
       margin:0; background:var(--page-bg); color:var(--text-dark);
       font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     }
-    .wrap{max-width:720px; margin:40px auto; padding:16px}
-    .card{background:var(--card-bg); border-radius:24px; box-shadow:0 8px 24px rgba(0,0,0,.08); padding:28px 24px}
 
-    /* Header style to match attachment */
+    /* Top blue banner */
+    .banner{height:50px; width:100%; background:var(--brand-blue)}
+
+    .wrap{max-width:720px; margin:0 auto 40px; padding:0 16px}
+    .card{
+      background:var(--card-bg);
+      border-radius:0 0 24px 24px;           /* square top corners */
+      box-shadow:0 8px 24px rgba(0,0,0,.08);
+      padding:28px 24px;
+      margin-top:0;
+    }
+
+    /* Header sizes to match form pages */
     h1{
-      margin:0 0 4px 0; font-weight:900; letter-spacing:.2px;
-      font-size:clamp(26px,6.4vw,44px);
+      margin:0 0 6px 0;
+      font-weight:900;
+      letter-spacing:.2px;
+      font-size:32px;                        /* exact size */
+      line-height:1.1;
+      white-space:nowrap;
     }
     .subhead{
-      margin:0 0 22px 0; font-weight:800; letter-spacing:.3px;
-      text-transform:uppercase; font-size:clamp(16px,3.6vw,22px);
+      margin:0 0 22px 0;
+      font-weight:800;
+      letter-spacing:.3px;
+      text-transform:uppercase;
+      font-size:20px;                        /* exact size */
       color:#4d4d4d;
+      white-space:nowrap;
     }
 
     /* Buttons */
@@ -42,28 +60,31 @@
     .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
 
-    /* Layout: make icon as tall as the two text lines */
+    /* Layout: icon and text closer together */
     .btn-grid{
-      display:grid; grid-template-columns:auto 1fr; gap:14px; align-items:center;
+      display:grid; grid-template-columns:auto 1fr; gap:10px; align-items:center;
     }
     .title{font-weight:800; font-size:18px; line-height:1.2}
     .subtitle{font-size:14px; color:var(--muted); margin-top:3px; line-height:1.2}
+    /* subtitle is in same block as title, so it's naturally left-aligned with it */
 
-    /* Prominent icons (square with blue bg + white people) */
+    /* Prominent icons: blue rounded square with white figures */
     .icon{
-      width:48px; height:48px; flex:none;
-      border-radius:12px; background:var(--brand-blue);
+      width:56px; height:56px; flex:none; border-radius:12px; background:var(--brand-blue);
       display:inline-block;
     }
     .icon svg{width:100%; height:100%}
+
     @media (min-width:640px){
-      .icon{width:56px; height:56px}
       .btn{padding:20px 22px}
+      .icon{width:60px; height:60px}
       .title{font-size:19px}
     }
   </style>
 </head>
 <body>
+  <div class="banner" aria-hidden="true"></div>
+
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
@@ -74,10 +95,11 @@
         aria-label="I am a team member. I want to assess myself.">
         <div class="btn-grid">
           <span class="icon" aria-hidden="true">
-            <!-- one person icon (white) -->
+            <!-- one person icon -->
             <svg viewBox="0 0 48 48" fill="none">
+              <rect x="2" y="2" width="44" height="44" rx="10" fill="var(--brand-blue)" />
               <circle cx="24" cy="16" r="9" fill="#ffffff"/>
-              <path d="M8 40c0-8.3 7.6-14 16-14s16 5.7 16 14" fill="#ffffff" opacity=".9"/>
+              <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff" opacity=".9"/>
             </svg>
           </span>
           <div>
@@ -87,17 +109,21 @@
         </div>
       </button>
 
-      <!-- Button 2: Peer (two persons icon) -->
+      <!-- Button 2: Peer (clear two-person icon) -->
       <button class="btn" onclick="location.href='./peer/';"
         aria-label="I am a peer reviewer. I want to review my friend.">
         <div class="btn-grid">
           <span class="icon" aria-hidden="true">
-            <!-- two persons icon (white) -->
+            <!-- two persons icon (clearly two heads/shoulders) -->
             <svg viewBox="0 0 48 48" fill="none">
-              <circle cx="19" cy="18" r="8" fill="#ffffff"/>
-              <circle cx="32.5" cy="19.5" r="7" fill="#ffffff" opacity=".92"/>
-              <path d="M6 40c0-6.8 6.2-12 13-12s13 5.2 13 12" fill="#ffffff" opacity=".9"/>
-              <path d="M19 28.5c6.6 0 13 4.2 13 11.5" stroke="#ffffff" stroke-linecap="round" opacity=".9"/>
+              <rect x="2" y="2" width="44" height="44" rx="10" fill="var(--brand-blue)" />
+              <!-- Left person -->
+              <circle cx="18" cy="17" r="7" fill="#ffffff"/>
+              <path d="M8 36c0-6 6-10 10-10" stroke="#ffffff" stroke-width="2" stroke-linecap="round" opacity=".95"/>
+              <path d="M8 36c0-6.5 6-11 12-11s12 4.5 12 11" fill="#ffffff" opacity=".28"/>
+              <!-- Right person (slightly behind) -->
+              <circle cx="30.5" cy="18.5" r="6.5" fill="#ffffff" opacity="1"/>
+              <path d="M22 36c0-5.8 5.2-9.5 10.5-9.5" stroke="#ffffff" stroke-width="2" stroke-linecap="round" opacity=".95"/>
             </svg>
           </span>
           <div>
