--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     h1{
       margin:0 0 6px 0;
       font-weight:900;
-      font-size:clamp(26px, 5vw, 32px);
-      line-height:1.2;
+      font-size:30px;
+      line-height:1.1;
+      color:#666666;
       word-break:break-word; /* ensures no overflow */
     }
     .subhead{
@@ -39,7 +40,7 @@
       font-weight:800;
       text-transform:uppercase;
       font-size:20px;
-      color:#4d4d4d;
+      color:#666666;
     }
 
     /* Buttons */
