--- a/team/index.html
+++ b/team/index.html
@@ -598,7 +598,18 @@
             <section id="welcome">
                 <h2 class="section-title">team member information</h2>
                 <div class="row"><label for="nick">your name</label><input id="nick" /></div>
-                <div class="row"><label for="email">your email</label><input id="email" type="email" /></div>
+               <div class="row">
+  <label for="email">your email</label>
+  <input 
+    id="email" 
+    name="email" 
+    type="email" 
+    required 
+    autocomplete="email" 
+    inputmode="email" 
+    placeholder="your@email.com" 
+  />
+</div>
                 <div class="row">
                     <label for="hotel">your location</label>
                     <select id="hotel" required="">
@@ -1980,5 +1991,6 @@
                 return 0;
             })()
         </script>
+        <script src="../validate-email.js"></script>
     </body>
 </html>
