--- a/peer/index.html
+++ b/peer/index.html
@@ -139,7 +139,7 @@
               .pill.selected{background:var(--blue); color:#fff}
 
               /* SCORE */
-              .score-kicker{font-size:10pt; font-weight:400; color:#999999; margin:12px 0 8px 0}
+              .score-kicker{font-size:11pt; font-weight:400; color:#808080; margin:12px 0 8px 0}
               .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
               .gauge{position:relative; height:28px; border-radius:8px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
               .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
@@ -700,7 +700,7 @@
             <section id="finish" style="display: none;">
                 <h2 class="visually-hidden">Overall Score</h2>
                 <div class="score-section">
-                    <div class="score-kicker">peer reviewer score</div>
+                    <div class="score-kicker">peer review score</div>
                     <div class="score-big" id="scorePercent">OVERALL SCORE —%</div>
                     <div class="gauge" id="gauge"></div>
                     <div class="rec-kicker"></div>
@@ -733,7 +733,7 @@
                     </h3>
                     <p style="font-size: 17px; font-weight: 500; color: #444; line-height: 1.4;">
                         click PDF to download the report<br />
-                        please send a copy to your team member
+                        please send a copy to the team member
                     </p>
                 </div>
                 <br />
