--- a/peer/index.html
+++ b/peer/index.html
@@ -621,8 +621,8 @@
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">team member information</h2>
-                <p class="intro">enter the details of the team member you will review. you must know this team member well and have worked in BED for at least 12 months</p>
+                <h2 class="section-title">who will you reviewn</h2>
+                <p class="intro">enter the details of the team member you will review. you must know this person well and you must have worked in BED for at least 12 months</p>
                 <div class="row"><label for="peerName">peer reviewer</label><input id="peerName" /></div>
                 <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" /></div>
                 <div class="row">
@@ -652,7 +652,7 @@
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
                         <span class="badge" style="width: 28px; height: 28px; border-radius: 50%; background: var(--blue); color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700;">1</span>
-                        <span>You are not so good at this</span>
+                        <span>You are not good at this</span>
                     </li>
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
                         <span class="badge" style="width: 28px; height: 28px; border-radius: 50%; background: var(--blue); color: #fff; display: inline-flex; align-items: center; justify-content: center; font-weight: 700;">2</span>
