--- a/peer/index.html
+++ b/peer/index.html
@@ -596,7 +596,7 @@
             <div class="progress" id="progressHeader"><span class="dot"></span><span class="dot"></span><span class="dot"></span> <span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             <!-- PAGE 1 -->
             <section id="welcome">
-                <h2 class="section-title">peer reviewer information</h2>
+                <h2 class="section-title">peer information</h2>
                 <div class="row"><label for="nick">your name</label><input id="nick" /></div>
                 <div class="row">
   <label for="email">your email</label>
@@ -621,7 +621,7 @@
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">who will you reviewn</h2>
+                <h2 class="section-title">your team member</h2>
                 <p class="intro">enter the details of the team member you will review. you must know this person well and you must have worked in BED for at least 12 months</p>
                 <div class="row"><label for="peerName">peer reviewer</label><input id="peerName" /></div>
                 <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" /></div>
@@ -645,7 +645,7 @@
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">INSTRUCTIONS</h2>
                 <p class="intro">
-                    Read each statement and think how this team member acts in these situations. Then select the rating that fits best. Be honest and sincere. The goal is for your friends to know what they're good at and what they can do
+                    Read each statement and think how the team member acts in these situations. Then select the rating that fits best. Be honest and sincere. You help your friends to know what they're good at and what they can do
                     better
                 </p>
                 <h2 class="section-title">RATING</h2>
