--- a/peer/index.html
+++ b/peer/index.html
@@ -644,10 +644,7 @@
             <!-- Instructions -->
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">INSTRUCTIONS</h2>
-                <p class="intro">
-                    Read each statement and think how the team member acts in these situations. Then select the rating that fits best. Be honest and sincere. You help your friends to know what they're good at and what they can do
-                    better
-                </p>
+                <p class="intro">Read each statement and think how the team member acts in these situations. Then select the rating that fits best. Be honest and sincere. You help your friends to know what they're good at and what they can do better</p>
                 <h2 class="section-title">RATING</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
                     <li class="scale-item" style="display: flex; align-items: center; gap: 10px; margin: 8px 0; font-size: 12pt;">
